
- Added more documentation on Mason's error handling and exception
system.  Task id #446.

- ApacheHandler objects created by Mason are now cached more
aggressively.  This results in a big speed win almost all
httpd.conf-based configurations.

- Mason's test harness now gives verbose output when the TEST_VERBOSE
environment variable is true.  This eliminates the need for setting
MASON_VERBOSE.

[ BUG FIXES ]

- Mason dies if asked to compile a component that evaluates to a false
value.  Task id #444.  Reported by David Wheeler.

- Mason now gives a better error message if you try to call a
component's methods or subcomponents from its <%shared> block.  Task
id #448.  Reported by Randy Harmon.

- If in_package was set, Mason Would die if output was generated after
a subrequest.  Task id #453.  Reported by David R. Baird.

- If a component called $m->cache_self, and then $m->decline, no
output would be generated.  Task id #454.  Patch by Vadim Ustiansky.


1.19  March 3, 2003

[ BUG FIXES ]

- Fixed a very nasty bug that could cause subcomponents or methods
from one component to show up in another components.  Task id #443 in
todo list.
- If the closing tag of a <%flags>, <%attr>, or <%args> block
contained upper case characters, the component would not be parsed
properly.  Reported by Chris Snyder.  Task id #440 in
todo list.
- Providing a Resolver object directly to the ApacheHandler
constructor caused a fatal error.  Reported by Kwindla Kramer.  Task
id #441 in todo list.


1.18  January 24, 2003

[ BUG FIXES ]

- Require Exception::Class 1.09.  Version 1.08 has a bug that causes
problems with Mason when used with any Perl earlier than 5.8.0.
- Fix a bug in the lexer code that caused Mason to not work with Perl
5.00503 at all.


1.17  January 17, 2003

[ ENHANCEMENTS ]

- Added "REQUEST:" as a component specifier for method comp calls,
similar to "SELF:" and "PARENT:".  "REQUEST:" is short-hand for
$m->request_comp.  Suggested by Manuel Capinha, among others.